--- a/configs/lean/lean-DOCKER.config
+++ b/configs/lean/lean-DOCKER.config
@@ -179,6 +179,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
 CONFIG_PACKAGE_luci-app-dnspod=y
 CONFIG_PACKAGE_luci-app-ddnsto=y
+CONFIG_PACKAGE_docker-compose=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-familycloud=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
@@ -374,6 +375,8 @@ CONFIG_PACKAGE_tmate=y
 CONFIG_PACKAGE_udp2raw-tunnel=y
 CONFIG_PACKAGE_udpspeeder=y
 CONFIG_PACKAGE_uugamebooster=y
+
+
 
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-option=y
