--- a/.github/workflows/NanoPi R4S Docker OpenWrt.yml
+++ b/.github/workflows/NanoPi R4S Docker OpenWrt.yml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron: 0 16 * * *
+    - cron: 0 16 1 * *
   # watch:
   #   types: started
 
@@ -22,7 +22,7 @@ env:
 jobs:
   Build:
     runs-on: ubuntu-18.04
-    if: github.repository == 'DHDAXCW/NanoPi-R4S-2021'
+    #if: github.repository == 'DHDAXCW/NanoPi-R4S-2021'
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
@@ -168,7 +168,7 @@ jobs:
   Upload:
     needs: [Build]
     runs-on: ubuntu-18.04
-    if: github.repository == 'DHDAXCW/NanoPi-R4S-2021'
+    #if: github.repository == 'DHDAXCW/NanoPi-R4S-2021'
     steps:
       - name: Checkout
         uses: actions/checkout@main
